interpreter/src/snapshots/tmi__tests__arrays_bounds.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/arrays_bounds.tm"
    - "9"
---
success: false
exit_code: 101
----- stdout -----
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/number.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/boolean.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/str.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/native.tm

----- stderr -----

thread 'main' panicked at /home/cpollet/Development/transmute-lang/transmute/interpreter/src/interpreter.rs:264:31:
index out of bounds: the len is 1 but the index is 1
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
