interpreter/src/snapshots/tmi__tests__arrays_if.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/arrays_if.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
Result: 18

----- stderr -----
