interpreter/src/snapshots/tmi__tests__fibo_iter.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/fibo_iter.tm"
    - "9"
  env:
    TRANSMUTE_STDLIB_PATH: /Users/cpollet/Development/transmute/target/debug/transmute-stdlib
---
success: true
exit_code: 0
----- stdout -----
Parse core
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib.tm
Parse internal  
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib/str.tm
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib/numbers.tm
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib/list.tm
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib/env.tm
Parse file      /Users/cpollet/Development/transmute/target/debug/transmute-stdlib/src/stdlib/booleans.tm
34

----- stderr -----
