interpreter/src/snapshots/tmi__tests__fibo_rec.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/fibo_rec.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
34

----- stderr -----
