interpreter/src/snapshots/tmi__tests__inner_function.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/inner_function.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/number.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/boolean.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/str.tm
Reading /home/cpollet/Development/transmute-lang/transmute/stdlib/src/stdlib/native.tm
Result: 34

----- stderr -----
