interpreter/src/snapshots/tmi__tests__perimeter.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/perimeter.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
36

----- stderr -----
