interpreter/src/snapshots/tmi__tests__perimeter_lit_struct.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/perimeter_lit_struct.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
36

----- stderr -----
