interpreter/src/snapshots/tmi__tests__perimeter_var_struct.snap
---
source: interpreter/src/lib.rs
info:
  program: tmi
  args:
    - "../examples/perimeter_var_struct.tm"
    - "9"
---
success: true
exit_code: 0
----- stdout -----
Result: 36

----- stderr -----
